--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.10.0",
+    "@types/socket.io": "^3.0.2",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -44,6 +45,7 @@
     "pg": "^8.16.3",
     "prisma": "^6.19.0",
     "reflect-metadata": "^0.2.2",
+    "socket.io": "^4.7.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
