--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "seed": "ts-node scripts/seed-all.ts",
     "seed:specialties": "ts-node prisma/seed-specialties.ts",
     "seed:payment-methods": "node seed-payment-methods.js",
+    "seed:real": "ts-node prisma/seed-real-data.ts",
     "seed:admin": "ts-node scripts/update-user-roles.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
