--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "reflect-metadata": "^0.2.2",
     "socket.io": "^4.7.5",
     "ts-node": "^10.9.2",
+    "twilio": "^5.12.0",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
